Fix compile warnings.